--- a/angular-app/package.json
+++ b/angular-app/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@types/facebook-js-sdk": "^3.2.1",
-    "bootstrap": "4.2.1",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.0",
