Backend no longer on fire, notre dame is saved

--- a/angular-app/src/tsconfig.app.json
+++ b/angular-app/src/tsconfig.app.json
@@ -4,6 +4,8 @@
     "outDir": "../out-tsc/app",
     "types": [
       "facebook-js-sdk" // facebook
+      ,
+      "jquery" //jquery
     ]
   },
   "exclude": [
