--- a/angular-app/angular.json
+++ b/angular-app/angular.json
@@ -27,7 +27,7 @@
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": ["node_modules/jquery/dist/jquery.js"],
             "es5BrowserSupport": true
           },
           "configurations": {
