--- a/angular-app/package.json
+++ b/angular-app/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@types/facebook-js-sdk": "^3.2.1",
+    "@types/jquery": "^3.3.29",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "d3": "^5.9.2",
