--- a/angular-app/package.json
+++ b/angular-app/package.json
@@ -25,9 +25,11 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "d3": "^5.9.2",
+    "d3-scale": "^3.0.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.0",
     "ngx-bootstrap": "^4.0.1",
+    "occurences": "^2.2.2",
     "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
