--- a/angular-app/package.json
+++ b/angular-app/package.json
@@ -26,6 +26,7 @@
     "@types/jquery": "^3.3.29",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
     "d3": "^5.9.2",
     "d3-scale": "^3.0.0",
     "hammerjs": "^2.0.8",
