--- a/angular-app/package.json
+++ b/angular-app/package.json
@@ -29,6 +29,7 @@
     "cors": "^2.8.5",
     "d3": "^5.9.2",
     "d3-scale": "^3.0.0",
+    "file-saver": "^2.0.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.0",
     "ngx-bootstrap": "^4.0.1",
@@ -43,9 +44,10 @@
     "@angular/cli": "~7.3.5",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
+    "@types/file-saver": "^2.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
