--- a/node-app/users/10217276131602773/Vores første/projectinfo.json
+++ b/node-app/users/10217276131602773/Vores første/projectinfo.json
@@ -1,1 +1,1 @@
-{"name":"Vores","desc":"Det virker !","group":[{"name":"Bachelor Fun","desc":"","id":"536165083455957"},{"name":"Hulen fælleskonto","desc":"","id":"288478278515460"}]}
+{"name":"Vores","desc":"Det virker ikke !","group":[{"name":"Bachelor Fun","desc":"","id":"536165083455957"},{"name":"Hulen fælleskonto","desc":"","id":"288478278515460"}]}
