--- a/angular-app/package.json
+++ b/angular-app/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~7.2.0",
     "@types/facebook-js-sdk": "^3.2.1",
     "@types/jquery": "^3.3.29",
+    "angular5-csv": "^0.2.11",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
