--- a/node-app/package.json
+++ b/node-app/package.json
@@ -19,6 +19,8 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "fs": "0.0.1-security",
-    "path": "^0.12.7"
+    "fs-extra": "^7.0.1",
+    "path": "^0.12.7",
+    "rimraf": "^2.6.3"
   }
 }
