Basic CSS + Export buttons added!

--- a/angular-app/src/tsconfig.app.json
+++ b/angular-app/src/tsconfig.app.json
@@ -5,7 +5,8 @@
     "types": [
       "facebook-js-sdk" // facebook
       ,
-      "jquery" //jquery
+      "jquery"
+      //jquery
     ]
   },
   "exclude": [
