--- a/angular-app/package.json
+++ b/angular-app/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~7.2.0",
     "@types/facebook-js-sdk": "^3.2.1",
     "@types/jquery": "^3.3.29",
+    "@types/jszip": "^3.1.5",
     "angular5-csv": "^0.2.11",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
@@ -33,6 +34,7 @@
     "file-saver": "^2.0.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.0",
+    "jszip": "^3.2.1",
     "ngx-bootstrap": "^4.0.1",
     "occurences": "^2.2.2",
     "popper.js": "^1.15.0",
