--- a/angular-app/package.json
+++ b/angular-app/package.json
@@ -25,6 +25,7 @@
     "@types/facebook-js-sdk": "^3.2.1",
     "@types/jquery": "^3.3.29",
     "@types/jszip": "^3.1.5",
+    "angular-file-saver": "^1.1.3",
     "angular5-csv": "^0.2.11",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
